--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@
 html {
   font-size: 18px;
   font-family: Helvetica, sans-serif;
-  line-height: 1.4px;
+  line-height: 1.4;
 }
 
 /* Header */
@@ -32,6 +32,9 @@ nav {
   padding-bottom: 1rem;
 }
 
+nav span {
+  font-size: 1rem;
+}
 nav div {
   display: flex;
   align-items: center;
@@ -48,3 +51,28 @@ ul li {
   display: inline-block;
   margin-right: 2rem;
 }
+
+.truncated-menu {
+  display: none;
+}
+
+/* Main Banner */
+header .flex {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10rem;
+}
+
+.main-banner {
+  background-color: #FFFFFF;
+  padding: 1.5rem 5rem;
+  margin-right: -2rem;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 1.2;
+}
+
+/* Supporting Section */
