Change local files to remote files.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,7 @@ html {
 /* Header */
 header {
   display: block;
-  background-image: url(/Users/MTracy/Desktop/Projects/ts3/resources/images/glasses-bg.png);
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
   background-position: center;
   background-size: cover;background-repeat: no-repeat;
   height: 31rem;
