--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -76,3 +76,27 @@ h1 {
 }
 
 /* Supporting Section */
+.supporting {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.service {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid black;
+  height: 8rem;
+  width: 5rem;
+  text-align: center;
+}
+
+.service img {
+  width: 5rem;
+}
+
+.service .paper-icon {
+  width: 3.5rem;
+}
