--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,7 +79,6 @@ h1 {
 .supporting {
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
 }
 
 .service {
@@ -87,10 +86,10 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid black;
   height: 8rem;
   width: 5rem;
   text-align: center;
+  padding: 4rem 3rem;
 }
 
 .service img {
