--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,7 +75,7 @@ h1 {
   line-height: 1.2;
 }
 
-/* Supporting Section */
+/* Supporting Service Section */
 .supporting {
   display: flex;
   justify-content: center;
@@ -98,4 +98,25 @@ h1 {
 
 .service .paper-icon {
   width: 3.5rem;
+}
+
+/* Supporting Information Section */
+.info {
+  padding-right: 5%;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+}
+
+.title div {
+  width: 10rem;
+  color: #FFFFFF;
+  background-color: cadetblue;
+  padding: .5rem 1.25rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1rem;
+  margin-bottom: 1rem;
 }
