Update width to max-width on nav for full width.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -141,7 +141,7 @@ footer img {
   }
 
   nav.container {
-    width: 100%;
+    max-width: 100%;
     margin-top: -1rem;
   }
 
@@ -154,3 +154,5 @@ footer img {
     font-size: 1.33rem;
   }
 }
+
+/*
