--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -155,4 +155,53 @@ footer img {
   }
 }
 
-/*
+/* Responsive Styling | 700px */
+@media only screen and (max-width: 700px) {
+  header {
+    height: 17rem;
+  }
+
+  .main-menu {
+    display: none;
+  }
+
+  .truncated-menu {
+    display: block;
+  }
+
+  nav span {
+    display: none;
+  }
+
+  .main-banner {
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+    margin-top: -2rem;
+  }
+
+  h1 {
+    font-size: 1rem;
+  }
+}
+
+/*Responsive Styling | 480px */
+@media only screen and (max-width: 575px) {
+  .supporting {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  footer img {
+    margin: 0 auto;
+  }
+  
+  footer div {
+    display: none;
+  }
+}
