--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,6 +159,7 @@ footer img {
 @media only screen and (max-width: 700px) {
   header {
     height: 17rem;
+    background-position: left;
   }
 
   .main-menu {
@@ -200,8 +201,40 @@ footer img {
   footer img {
     margin: 0 auto;
   }
-  
+
   footer div {
     display: none;
+  }
+
+  .service {
+    padding-top: 3.77rem;
+    padding-bottom: 1rem;
+    margin: 0 auto;
+    margin-bottom: 3rem;
+  }
+
+  .service div {
+    font-size: .77rem;
+  }
+
+  .service.ruler, .service.truck {
+    height: 6rem;
+  }
+
+  .info {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .title div {
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .info p {
+    font-size: .77rem;
+    padding: 1rem;
   }
 }
