--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -187,7 +187,7 @@ footer img {
 }
 
 /*Responsive Styling | 480px */
-@media only screen and (max-width: 575px) {
+@media only screen and (max-width: 575px) and (orientation: portrait) {
   .supporting {
     flex-direction: column;
     align-items: center;
