--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -156,7 +156,7 @@ footer img {
 }
 
 /* Responsive Styling | 700px */
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) and (orientation: landscape) {
   header {
     height: 17rem;
     background-position: left;
@@ -186,7 +186,7 @@ footer img {
   }
 }
 
-/*Responsive Styling | 480px */
+/* Responsive Styling | 575px & Portrait Orientation */
 @media only screen and (max-width: 575px) and (orientation: portrait) {
   .supporting {
     flex-direction: column;
